# langchain-oceanbase

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  docker-compose.seekdb.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/scripts/: combine_junit.py  summarize_junit.py
.github/workflows/: ci.yml  e2e-test.yml  gitflow-governance.yml  python-publish.yml
docs/: ai_functions.ipynb  ai_functions.md  embeddings.ipynb  embeddings.md  hybrid_search.ipynb  hybrid_search.md  langgraph_checkpoint.ipynb  langgraph_store.ipynb  migration_guide.md  vectorstores.ipynb  vectorstores.md
docs/plans/: 2026-01-30-langgraph-checkpointer-design.md  2026-05-11-langgraph-checkpoint-conformance-execution-plan.md
examples/: embedded_seekdb_vectorstore.py  hybrid_search_demo.py  langgraph_agent.py  langgraph_store.py  quickstart.py  rag_demo.py
langchain_oceanbase/: __init__.py  ai_functions.py  chat_message_histories.py  checkpointer.py  embedding_utils.py  exceptions.py  store.py  vectorstores.py
langchain_oceanbase/checkpoint/: __init__.py  saver.py
scripts/: wait_oceanbase_ready.sh
tests/: test_ci.py  test_ci_simple.py  test_compatibility.py  test_comprehensive.py  test_integration.py
tests/integration_tests/: _backend_utils.py  conftest.py  test_ai_functions.py  test_chat_message_histories.py  test_checkpoint.py  test_checkpoint_conformance.py  test_checkpointer.py  test_checkpointer_embedded_seekdb.py  test_checkpointer_mysql.py  test_embedded_seekdb.py  test_embedding_vectorization.py  test_hybrid_search.py  test_store.py  test_vectorstore_standard.py  test_vectorstores.py
tests/unit_tests/: test_backend_utils.py  test_chat_message_histories.py  test_checkpointer_async_api.py  test_checkpointer_mysql_compat.py  test_embedding_utils.py  test_exceptions.py  test_legacy_checkpoint_saver.py  test_store.py  test_vectorstore_standard.py
