[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "langchain-oceanbase"
version = "0.3.3"
description = "An integration package connecting OceanBase and LangChain"
authors = ["shanhaikang.shk <shanhaikang.shk@oceanbase.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "langchain_oceanbase"}]
include = ["langchain_oceanbase/py.typed"]

[tool.mypy]
disallow_untyped_defs = "True"

[tool.poetry.urls]
"Source Code" = "https://github.com/langchain-ai/langchain/tree/master/libs/partners/oceanbase"
"Release Notes" = "https://github.com/langchain-ai/langchain/releases?q=tag%3A%22oceanbase%3D%3D0%22&expanded=true"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
langchain-core = "^0.3.0"
langgraph = ">=0.2.0,<1.0.0"
langgraph-checkpoint = ">=2.1.0,<5.0.0"
# >=1.2: unified SeekDB client. Constrain pylibseekdb so the lock resolves to 1.1+ (manylinux + macOS arm64 wheels);
# 1.0.0.post1 is Linux-wheel-only metadata and breaks Poetry on macOS arm64 / some CI installers.
pyseekdb = ">=1.2.0.post1,<3"
# Cap <1.2: pylibseekdb 1.2+ wheels are manylinux-only; 1.1.x includes macOS arm64 for local dev + Linux for CI
pylibseekdb = { version = ">=1.1.0,<1.2", markers = "sys_platform == 'linux' or (sys_platform == 'darwin' and platform_machine == 'arm64')" }
pyobvector = ">=0.2.25"
# Pin to safe version for security (CVE-2025-69228 etc.); direct dep so Dependabot can update
aiohttp = ">=3.13.3"

[tool.ruff.lint]
select = ["E", "F", "I", "T201"]
ignore = ["E501"]  # Allow long lines in docstrings

[tool.ruff.lint.per-file-ignores]
# Allow print statements in test files and examples
"tests/**/*.py" = ["T201"]
"examples/**/*.py" = ["T201"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5"
markers = [
    "compile: mark placeholder test used to compile integration tests without running them",
    "embedded_seekdb: optional integration test for embedded SeekDB (requires pylibseekdb)",
]
asyncio_mode = "auto"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.codespell]
optional = true

[tool.poetry.group.test_integration]
optional = true

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pre-commit = ">=3.7,<5.0"
# Pin to safe version for security (Dependabot security advisory); also makes it a direct dep so Dependabot can update
virtualenv = ">=20.36.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-cov = "^4.1"
pytest-socket = "^0.7.0"
pytest-watcher = "^0.3.4"
langchain-tests = "==0.3.5"
langchain-community = "^0.3.12"
dashscope = "^1.20.14"

[tool.poetry.group.codespell.dependencies]
codespell = "^2.2.6"

[tool.poetry.group.test_integration.dependencies]

[tool.poetry.group.lint.dependencies]
ruff = "^0.5"

[tool.poetry.group.typing.dependencies]
mypy = "^1.10"
